scenarios/private_scenario/k8s_resources/db-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: gitea-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/gitea: "true"
        service: gitea-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: gitea
            - name: MYSQL_PASSWORD
              value: gitea
            - name: MYSQL_ROOT_PASSWORD
              value: gitea
            - name: MYSQL_USER
              value: gitea
          image: mysql:latest
          name: gitea-db
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-claim0
      restartPolicy: Always
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0
