scenarios/private_scenario/k8s_resources/gitea-http-loadbalancer.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: gitea-http-loadbalancer
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  type: LoadBalancer
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: gitea-web
  selector:
    app: gitea
