scenarios/private_scenario/k8s_resources/gitea-loadbalancer.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: gitea-loadbalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.3
  selector:
    app: gitea
  ports:
  - name: ssh
    protocol: TCP
    port: 2222
    targetPort: gitea-ssh
