scenarios/private_scenario/k8s_resources/gitea-nodeport.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: gitea-nodeport
spec:
  type: NodePort
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: gitea-web
  selector:
    app: gitea
