scenarios/private_scenario/k8s_resources/server-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: gitea-server-service
  name: gitea-server-service
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: "222"
      port: 222
      targetPort: 22
  selector:
    service: gitea-server
