scenarios/private_scenario/k8s_resources/gitea-networkpolicy.yaml
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: gitea
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/gitea: "true"
  podSelector:
    matchLabels:
      network/gitea: "true"
